@@ -1,2 +1,3 @@
+^\.travis\.yml$
 ^.*\.Rproj$
 ^\.Rproj\.user$
