@@ -1,3 +1,10 @@
+            CHANGES IN KKNN VERSION 1.2-6
+
+OTHER CHANGES
+
+    o added travis-ci
+
+
             CHANGES IN KKNN VERSION 1.2-5
 
 BUG FIXES
